src/objects/n2de__Distributor_Tag__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Comparison_operator__c</fullName>
        <label>Comparison operator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor_Tag_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Tag Category</label>
        <referenceTo>n2de__Tag_Category__c</referenceTo>
        <relationshipLabel>Distributor Tags</relationshipLabel>
        <relationshipName>Distributor_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor_Tag_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Tag Value</label>
        <referenceTo>n2de__Tag_Value__c</referenceTo>
        <relationshipLabel>Distributor Tags</relationshipLabel>
        <relationshipName>Distributor_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor__c</fullName>
        <label>Distributor</label>
        <referenceTo>n2de__Distributor__c</referenceTo>
        <relationshipLabel>Distributor Tags</relationshipLabel>
        <relationshipName>Distributor_Tags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Field_name__c</fullName>
        <inlineHelpText>Filter type, member tag, operator and comparison tag value used to filter member selection used by this distributor.</inlineHelpText>
        <label>Field name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Field_type__c</fullName>
        <label>Field type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Type__c</fullName>
        <description>The type of distribution tag - either a static value or dynamic retrieving tag value from a field</description>
        <inlineHelpText>The type of distribution tag - either a static value or dynamic retrieving tag value from a field</inlineHelpText>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Distributor Tag</label>
    <nameField>
        <label>Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>